# frappe-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  DEVELOPER.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: example-pre-commit-config.yaml
examples/: .pre-commit-config.yaml
scripts/: __init__.py  check_coding_standards.py  check_doctype_naming.py  check_translations.py
