[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frappe-pre-commit"
version = "1.0.0"
description = "Pre-commit hooks for Frappe Framework coding standards"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bhushan Barbuddhe", email = "bhushan.barbuddhe@dhwaniris.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]
keywords = ["frappe", "erpnext", "pre-commit", "hooks", "code-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/dhwani-ris/frappe-pre-commit"
Repository = "https://github.com/dhwani-ris/frappe-pre-commit"
Documentation = "https://github.com/dhwani-ris/frappe-pre-commit#readme"
"Bug Tracker" = "https://github.com/dhwani-ris/frappe-pre-commit/issues"
Changelog = "https://github.com/dhwani-ris/frappe-pre-commit/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]